Fix data table overflow issue

--- a/assets/3-table.css
+++ b/assets/3-table.css
@@ -56,7 +56,3 @@ th, td {
 table tr td ul {
     text-align: left !important;
 }
-
-#lift-over-results-table, #coexpression-pathways {
-    overflow-x: auto;
-}
